tests/fixtures/invalid/borrow_escapes_scope.ko
module borrow_test {
    meta {
        purpose: "Test borrow escapes scope detection"
    }

    fn bad_return(ref s: String) -> String {
        return s
    }
}
